<resources>
    <string name="app_name">Babble</string>
    <string name="btnLogin">Login</string>
    <string name="pswHint">Password</string>
    <string name="usrHint">Username</string>
    <string name="loginMsg">Log into your account</string>
    <string name="registerLink">Not Registered?</string>
    <string name="registerMsg">Create a new account</string>
    <string name="displayNameHint">Display Name</string>
    <string name="newPswHint">New Password</string>
    <string name="confirmNewPswInput">Confirm new Password</string>
    <string name="registerBtn">Register</string>
    <string name="loginLink">Already Registered?</string>
    <string name="profilePicHint">Select Profile Picture</string>
    <string name="photoPreview">proto preview</string>
    <string name="addChat">add chat</string>
    <string name="chatsTitle">Chats</string>
    <string name="addContactHint">Enter contact\'s username</string>
    <string name="addBtn">Add</string>
    <string name="cancel">Cancel</string>
    <string name="settingsTitle">Settings</string>
    <string name="nameChangeHint">New display name</string>
    <string name="picChangeDescrip">profilePicChange</string>
    <string name="serverAddrHint">Set Server\'s address</string>
    <string name="themeHint">Theme (Light / Dark)</string>
    <string name="save">Save</string>
    <string name="serverAddrDescr">Server\'s address</string>
    <string name="appearance">Appearance</string>
    <string name="connection">Connection</string>
    <string name="account">Account</string>
    <string name="messages_view">messages view</string>
    <string name="contacts_image">contact\'s image</string>
    <string name="logoutBtn">Log Out</string>
    <string name="deleteContact">Delete Contact</string>


    <string name="MessageBox">MessageBox</string>
    <string name="Send">Send</string>
    <string name="backtocontactslist">backToContactsList</string>
    <string name="name_of_user">Name of User</string>
    <string name="enter_message">Enter Message…</string>
    <string name="sendbtn">sendBTN</string>
    <string name="no_previous_messages">No Previous Messages.</string>
    <string name="noMessages">Looks like there aren\'t any messages yet.</string>
    <string name="username_already_exists">This username already exists in your contacts.</string>

    <string name="BaseUrl">http://10.0.2.2:5001/api/</string>
    <string name="error_title">Error Reaching Server</string>
    <string name="ok">OK</string>
    <string name="all_fields_are_required">All fields are required.</string>
    <string name="invalid_server_address">Invalid server address.</string>
    <string name="this_chat_deleted">This chat was deleted.</string>
</resources>